# baremetal-rust-riscv

./: Cargo.toml  README.md  build.rs  memory.x
.cargo/: config.toml
htif/: Cargo.toml
htif/src/: lib.rs  panic_htif_print.rs
riscv-benchmarks/: Cargo.toml  build.rs
riscv-benchmarks/benches/: lib.rs
riscv-benchmarks/src/: allocator.rs  foo.rs  lib.rs  main.rs
src/: benchmark.rs  crt.S  htif.rs  hw_util.rs  lib.rs  linker.ld  main.rs  memory.x  panic_htif_print.rs
