[package]
name = "riscv-benchmarks"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "1.1.31"

[dependencies]
riscv = "0.12.1"
riscv-rt = "0.13.0"
htif = { path = "../htif" }
radsort = "0.1.1"
modulo-n-tools = "0.2.0"
md-5 = { version = "0.10.6", default-features = false }
num = { version = "0.4.3", default-features = false, features = ["alloc"] }
num-bigint = { version = "0.4.6", default-features = false }
aes = "0.8.4"
sha2 = { version = "0.10.8", default-features = false }

[features]
std = []

[[bench]]
name = "corebenches"
path = "benches/lib.rs"
test = true
